--- a/Homework 1 Files/index.html
+++ b/Homework 1 Files/index.html
@@ -45,6 +45,7 @@
         Your browser does not support canvas.
     </canvas>
         <p>Canvas 6</p>
+            <img id="img1" src="image/logo.png" width="477" height="600" style="display:none;">
     <canvas id="Canvas6" width="500" height="300">
         Your browser does not support canvas.
     </canvas>
