--- a/Peters_Janay_Homework1 Files/index.html
+++ b/Peters_Janay_Homework1 Files/index.html
@@ -4,6 +4,7 @@
     <title>HTML5 Drawing</title>
     
     <script type="text/javascript" src="js/main.js"> </script>
+    <script type="text/javascript" src="includes/modernizr.js"></script>
     
         <style>
             #Canvas1, #Canvas2, #Canvas3,
