Peters_Janay_WIA-Presentation
Finishing changes

--- a/Peters_Janay_WIA-Presentation/index.html
+++ b/Peters_Janay_WIA-Presentation/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Tutorial: Complex animation</title>
+    <title>My Simple Animation</title>
     
     <link rel="stylesheet" href="css/style.css">
 
