--- a/Peters_Janay_WIA-Presentation/presentation.html
+++ b/Peters_Janay_WIA-Presentation/presentation.html
@@ -68,7 +68,7 @@
 &lt;html&nbsp;&gt;
 &nbsp;&nbsp;&lt;head&gt;
 &nbsp;&nbsp;&nbsp;&nbsp;&lt;meta&nbsp;charset=&quot;UTF-8&quot;&gt;
-&nbsp;&nbsp;&nbsp;&nbsp;&lt;title&gt;Tutorial:&nbsp;Complex&nbsp;animation&lt;/title&gt;
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;title&gt;My&nbsp;Simple&nbsp;animation&lt;/title&gt;
 &nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&lt;link&nbsp;rel=&quot;stylesheet&quot;&nbsp;href=&quot;css/style.css&quot;&gt;
 
